--- a/views/fragmente/footer.ejs
+++ b/views/fragmente/footer.ejs
@@ -13,4 +13,5 @@
         MELODINATOP - Toate drepturile rezervate &copy; <time datetime="2025-03-05">2025</time>
     </small>
     <p id = "banner">Acesta este un proiect scolar!</p>
+    <script src="/resurse/js/main.js"></script>
 </footer>
