--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -16,4 +16,4 @@
         <link rel="stylesheet" href="/resurse/css/nav1000.css" type="text/css" media="screen and   (max-width:1000px)"/>
         
         <link rel="stylesheet" href="/resurse/css/nav700.css" type="text/css" media="screen and (max-width:700px)"/>
-        
+        <script src="/resurse/js/main.js"></script>
