--- a/views/pagini/index.ejs
+++ b/views/pagini/index.ejs
@@ -86,7 +86,7 @@
                     <h2>PROGRAM DE LUCRU</h2>
                     <div class="table table-bordered">
                         <table id="tab-orar">
-                            <caption class="text-center">actualizat 24.03.2025</caption>
+                            <caption>actualizat 24.03.2025</caption>
                             <thead>
                                 <tr>
                                     <th>PERIOADA</th>
@@ -198,10 +198,7 @@
             
             <section id="galerie-statica">
                 <div id="oglinda">
-                    <h2>
-                        <span class="original">Un text</span>
-                        <span class="oglindit">Un text</span>
-                    </h2>
+                    <span id="text">Galerie</span> <span id="text-reflectat"></span>
                 </div>
                 
                 <div id="gr">
